--- a/CP321 Project/project.ipynb
+++ b/CP321 Project/project.ipynb
@@ -5,14 +5,17 @@
    "metadata": {},
    "source": [
     "<center><h1 style=\"font-family: 'Times New Roman', Times, serif;\">CP321: Analysis of the highest weekly earners in Canada</h1></center>\n",
-    "<center><h3 style=\"font-family: 'Times New Roman', Times, serif;\">Sohan Hossain, Prithvi Paturi, Vikas Movva</h1></center>\n",
+    "<center><h3 style=\"font-family: 'Times New Roman', Times, serif;\">Sohan Hossain, Prithvi Paturi, Vikas Movva</h3></center>\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h2 style=\"font-family: 'Times New Roman', Times, serif;\">Introduction</h2>\n",
+    "<hr>"
+   ]
   },
   {
    "cell_type": "code",
