--- a/CP321 Project/project.ipynb
+++ b/CP321 Project/project.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1 style=\"font-family: 'Times New Roman', Times, serif;\">CP321: Analysis of the highest weekly earners in Canada</h1></center>\n",
-    "<center><h3 style=\"font-family: 'Times New Roman', Times, serif;\">Sohan Hossain, Prithvi Paturi, Vikas Movva</h3></center>\n",
+    "<h1>CP321: Analysis of the highest weekly earners in Canada</h1>\n",
+    "<center><h3>Sohan Hossain, Prithvi Paturi, Vikas Movva</h3></center>\n",
     "\n"
    ]
   },
@@ -13,8 +13,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"font-family: 'Times New Roman', Times, serif;\">Introduction</h2>\n",
-    "<hr>"
+    "<h2>Introduction</h2>\n",
+    "<hr>\n",
+    "\n",
+    "Money is what makes the world go round. It’s not a doubt that a majority of people are interested in knowing how to make more money. Our project focuses on understanding how education influences income in Canada, while also emphasizing factors such as age and geographic location. Our dataset analysis aims to pinpoint which group in the Canadian workforce earns the most each week, while also interpreting those factors individually."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Problem Question</h2>\n",
+    "<hr>\n",
+    "\n",
+    "<h3>How do education level, age group, and employment type affect the average weekly wage in Canada? </h3>"
    ]
   },
   {
