--- a/CP321 Project/project.ipynb
+++ b/CP321 Project/project.ipynb
@@ -13,8 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Introduction</h2>\n",
-    "<hr>\n",
+    "<h2><u>Introduction</u></h2>\n",
     "\n",
     "Money is what makes the world go round. It’s not a doubt that a majority of people are interested in knowing how to make more money. Our project focuses on understanding how education influences income in Canada, while also emphasizing factors such as age and geographic location. Our dataset analysis aims to pinpoint which group in the Canadian workforce earns the most each week, while also interpreting those factors individually."
    ]
@@ -23,10 +22,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Problem Question</h2>\n",
-    "<hr>\n",
+    "<h2><u>Problem Question</u></h2>\n",
     "\n",
     "<h3>How do education level, age group, and employment type affect the average weekly wage in Canada? </h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><u>Data Source and Description</u></h2>\n",
+    "\n",
+    "The dataset for this project is derived from a compilation of Canadian wage data, which has been made to reflect earnings across various demographics. The source of the data is data.ontario.ca, ensuring data reliablity and relevance.\n",
+    "\n",
+    "<h2><u>Scope and Limitations</u></h2>\n",
+    "\n",
+    "The dataset contains information from the year 1997 covering a wide demographic spread. The dataset is limited in the sense of of going up to Dec 2020, with no information on the wage changes post-covid.\n",
+    "\n",
+    "<h2><u>Variables</u></h2>\n",
+    "\n",
+    "\n",
+    "<b>Education Level:</b> Categorized from \"Some high school\" to \"Above bachelor's degree\". This variable assesses the correlation between educational attainment and wage levels.\n",
+    "\n",
+    "<b>Age Group: </b>Divided into segments such as 18-25, 26-35, etc., to analyze earnings across different life stages.\n",
+    "\n",
+    "<b>Employment Type:</b> Includes classifications such as full-time, part-time, contractual, etc., reflecting the diversity of employment conditions.\n",
+    "\n",
+    "<b>Average Weekly Wage:</b> The primary outcome variable, indicating the mean wage earned per week within each subgroup.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<h2><u></u></h2>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><u>Impact of education level on weekly wage</u></h2>\n"
    ]
   },
   {
